--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-"mg:gen": "typeorm-ts-node-commonjs migration:generate -d src/database/data-source.ts src/database/migrations",
-
+    "mg:gen": "typeorm-ts-node-commonjs migration:generate -d src/database/data-source.ts src/database/migrations/migration",
     "mg:run": "typeorm-ts-node-commonjs migration:run -d src/database/data-source.ts",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
